--- a/page2.html
+++ b/page2.html
@@ -81,8 +81,15 @@ document.addEventListener("DOMContentLoaded", function() {
 
     const data = [
         {name: "kryz", img: "https://i.pinimg.com/736x/8c/3d/f5/8c3df517f607dca2a69e1c0d6905d5ef.jpg"},
+        {name: "ken >hes autistic but chill<", img: "https://i.pinimg.com/1200x/4f/f3/9b/4ff39b209f61c2d487eada5d302ce2f3.jpg"},
+        {name: "taki", img: "https://i.pinimg.com/736x/24/da/5b/24da5ba2d71a413d432168c706c0785f.jpg"},
+        {name: "kien", img: "https://i.pinimg.com/1200x/13/8d/21/138d2171e25391aef87dd96379feca1d.jpg"},
         {name: "jestc", img: "https://i.pinimg.com/736x/73/b0/ff/73b0ffd592cdd81598f086ce8d182205.jpg"},
+        {name: "silver", img: "https://i.pinimg.com/736x/58/82/ae/5882aea381893361f1910de3882efc66.jpg"},
+        {name: "vex <dk who invited that mf>", img: "https://i.pinimg.com/736x/c9/88/34/c98834ca744cf0cd0f514cd7784ff134.jpg"},
+        {name: "grimmjow cuz grimmjow", img: "https://i.pinimg.com/736x/83/86/96/838696e38ee28e474e293d320bc42c5e.jpg"},
         {name: "mujib", img: "https://i.pinimg.com/1200x/eb/0d/2c/eb0d2c7abb1ac7d1a3cc612d2a779449.jpg"},
+        {name: "justice i think he like undertail", img: "https://i.pinimg.com/736x/d9/b6/93/d9b693b54cbf8f0087962c684c2b3a15.jpg"},
         {name: "vyre", img: "https://i.pinimg.com/736x/f8/a0/f4/f8a0f4d074fee8c31ee630643676892d.jpg"},
         {name: "Shiro", img: "https://i.pinimg.com/736x/a4/76/b3/a476b3f4aa4477f76fd449c198b14d2f.jpg"},
         {name: "leyley < smash>", img: "https://i.pinimg.com/736x/61/87/9c/61879c67280c2d357dabb6e480fe18f7.jpg"},
@@ -102,3 +109,4 @@ document.addEventListener("DOMContentLoaded", function() {
 
 </body>
 </html>
+
