--- a/page2.html
+++ b/page2.html
@@ -94,7 +94,7 @@ document.addEventListener("DOMContentLoaded", function() {
         {name: "leyley < smash>", img: "https://i.pinimg.com/736x/61/87/9c/61879c67280c2d357dabb6e480fe18f7.jpg"},
         {name: "renfold", img: "https://i.pinimg.com/736x/3f/b1/eb/3fb1ebb8f5ff167f97ce9e9c1f3bfe4d.jpg"}
     ];
-
+console.log("Total items:", data.length);
     let index = 0;
 
     btn.onclick = function() {
@@ -108,5 +108,6 @@ document.addEventListener("DOMContentLoaded", function() {
 
 </body>
 </html>
+
 
 
