--- a/page2.html
+++ b/page2.html
@@ -93,6 +93,9 @@
             const picDisplay = document.getElementById("picDisplay");
 
             const data = [
+                {name: "silver", img: "https://i.pinimg.com/736x/a1/64/89/a16489b32cffeac0615e499b86e11f47.jpg"},
+                {name: "swehde", img: "https://i.pinimg.com/736x/84/4f/60/844f60d0d10a9c3bb5d97128cb4b4f3b.jpg"},
+                {name: "backwards", img: "https://i.pinimg.com/1200x/ff/a0/4c/ffa04c26926cbd357fe51684d0ca7efd.jpg"},
                 {name: "kryz", img: "https://i.pinimg.com/736x/8c/3d/f5/8c3df517f607dca2a69e1c0d6905d5ef.jpg"},
                 {name: "ken >hes autistic but chill<", img: "https://i.pinimg.com/1200x/4f/f3/9b/4ff39b209f61c2d487eada5d302ce2f3.jpg"},
                 {name: "taki", img: "https://i.pinimg.com/736x/24/da/5b/24da5ba2d71a413d432168c706c0785f.jpg"},
@@ -121,3 +124,4 @@
     </script>
 </body>
 </html>
+
